2007-12-15  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	* libavogadro/src/engines/hbondengine.[h,cpp],
	libavogadro/src/engines/hbondsettingswidget.ui: Added hydrogen bond
	engine. I was planning on drawing stippled lines, but it seems that
	this isn't implemented yet.

2007-12-13  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	* libavogadro/src/tools/autoopttool.[h,cpp]: Added Numerical or
	Analytical gradients option. (was this left out for a reason? feel
	free to remove if this is the case)

	* avogadro/src/extensions/prop*.[h,cpp]: Added angles and torsions.

2007-12-13  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/glwidget.cpp: Invalidate the cache after mouse up.

	* libavogadro/src/engines/labelengine.*: Don't draw labels when using
	the renderQuick() method.

2007-12-13  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* libavogadro/src/glwidget.cpp (renderCrystal): Clean up main
	render() function with additional function to handle translations
	of crystal cells via display lists. Much cleaner code and should
	be faster on larger crystals.

2007-12-12  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* libavogadro/src/glwidget.cpp: Add in display lists for
	renderQuick. Wraps all engines into one list for maximum speed.

	* libavogadro/src/engines/wireengine.[h,cpp]: Skip display lists,
	as glWidget now handles this for us.

	* libavogadro/src/elementtranslate.cpp: Fix US spelling of
	aluminum. Marcus can adjust accordingly in GB translation.

2007-12-12  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/glwidget.cpp: Don't use dynamic scaling to render
	the axes - cylinders were reduced to lines before.

	* libavogadro/src/engine.h: Added a renderQuick() function that
	focuses on rendering the molecule quickly for interactivity.

	* libavogadro/src/glpainter.cpp: Use a reduced quality when dynamic
	scaling is not used - 1/3rd of max for that quality right now.
